Corrected orphan and misaligned text

--- a/Root/CSS/Base/Component/Feedback.css
+++ b/Root/CSS/Base/Component/Feedback.css
@@ -1,4 +1,3 @@
 #feedback-contact-table {
-	margin: 6px 0 8px 16px;
 	border-spacing: 8px 2px
 }
